chore: 코드 구조 일관성 적용